MS-37 fix(styles): correst z-index for logo

--- a/src/pages/basePage/basePage.css
+++ b/src/pages/basePage/basePage.css
@@ -12,7 +12,7 @@
   left: 0;
   top: 0;
   height: 180px;
-  z-index: -1;
+  z-index: 0;
 }
 
 .user-menu {
